# ai-service-mesh

./: .env.example  .gitignore  AUDIT.md  CONTRIBUTORS.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  publish-ghcr.yml
backend/: Dockerfile  pyproject.toml
backend/ai_service_mesh/: __init__.py  api.py  config.py  db.py  db_backend.py  discovery.py  invoke.py  main.py  migrate.py  models.py  orchestrator.py  payments.py  schema.py  security.py  verification.py
backend/load/: README.md  locustfile.py
backend/tests/: conftest.py  test_api.py  test_db_backend.py  test_integration_e2e.py  test_invoke_policy.py  test_orchestrator.py  test_security.py
docs/: api.md  architecture.md  deployment.md  killer-features-roadmap.md  security.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ActivityFeed.tsx  AgentGrid.tsx  MeshTopology.tsx  StatsBar.tsx
frontend/src/lib/: api.ts
scripts/: migrate_sqlite_to_postgres.py  real_agent_server.py  register_e2e_agent.py  run-infra-test.sh
